# pico-test-adcspi

./: .gitignore  CMakeLists.txt  README.md  adc0832.c
